package Data;

public class GlobalObj {
}
