package Data;

public class UserObj {
    public static String username;
    public static String first_name;
    public static String family_name;
    public static String telephone;
    public static String e_mail;
    public static BankAccount account;
}
